--- a/docs/templates/discordfx/styles/main.css
+++ b/docs/templates/discordfx/styles/main.css
@@ -146,8 +146,27 @@ button, a, .btn-primary {
   .buttons-unit .button {
       font-size: 24px;
   }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  @media only screen and (max-width: 1024px) {
+    .logomark
+    {
+        height: 50px;
+    }
+    .hero {
+      height: 400px;
+      margin-top: 0px;
+    }
+  }
   
   @media only screen and (max-width: 768px) {
+    .logomark
+    {
+        height: 50px;
+    }
     .hero {
       height: 400px;
       margin-top: 0px;
